Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28310

Missing binlog data for INSERT .. ON DUPLICATE KEY UPDATE

    XMLWordPrintable

Details

    Description

      Using the following test case, the second INSERT statement is not logged in the binlog when using MIXED binlog format and thus is not replicated to a slave, leading to inconsistent state of replication.

      Server version: 10.3.34-MariaDB-log MariaDB Server

      CREATE TABLE t1 (
          id INT PRIMARY KEY AUTO_INCREMENT,
          a INT,
          b INT,
          c INT,
          UNIQUE (a),
          UNIQUE (b)
      );
       
      INSERT INTO t1 (`a`,`c`) VALUES (1,1), (2,1) ON DUPLICATE KEY UPDATE c = 1;
      INSERT INTO t1 (`a`,`c`) VALUES (3, 1),(2,1), (1,1) ON DUPLICATE KEY UPDATE c = 1;
      

      Attachments

        Issue Links

          Activity

            People

              monty Michael Widenius
              vnsavage Iliya Polihronov
              Votes:
              4 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4.25d
                  4.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.